[gd_scene load_steps=21 format=3 uid="uid://c4dyy4kax1ogv"]

[ext_resource type="Script" path="res://Scenes/Units/BaseUnit/BaseUnit.gd" id="1_kwkx1"]
[ext_resource type="Texture2D" uid="uid://fbbadc82es6v" path="res://Art/CharacterArt/BaseUnits.png" id="2_sl3nq"]
[ext_resource type="Script" path="res://Scenes/Units/BaseUnit/StateMachine.gd" id="4_4ntpo"]
[ext_resource type="Script" path="res://Scenes/Units/BaseUnit/States/EnemyAttack.gd" id="4_hr32h"]
[ext_resource type="Shader" path="res://Art/Shaders/hitEffect.gdshader" id="4_x4imc"]
[ext_resource type="Script" path="res://Scenes/Units/BaseUnit/States/EnemyFollow.gd" id="6_8col6"]
[ext_resource type="Script" path="res://Scenes/Units/BaseUnit/States/EnemyIdle.gd" id="7_mura8"]
[ext_resource type="Script" path="res://Scenes/Units/BaseUnit/States/EnemyStun.gd" id="9_f6npj"]
[ext_resource type="Script" path="res://Scenes/Units/BaseUnit/MovementAnimations.gd" id="9_t578p"]
[ext_resource type="Texture2D" uid="uid://dm5ieeq1ro88h" path="res://Art/UIArt/HealthBar2.png" id="12_vaypi"]
[ext_resource type="Texture2D" uid="uid://coq3gquawvlud" path="res://Art/UIArt/HealthBar1.png" id="13_tnq6t"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ysvin"]
radius = 5.0

[sub_resource type="Animation" id="Animation_h2q2f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterArt/Body/Torso/TorsoArt:material:shader_parameter/flash_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterArt/Body/Head/HeadArt:material:shader_parameter/flash_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ofoju"]
resource_name = "hitAnimation"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CharacterArt/Body/Torso/TorsoArt:material:shader_parameter/flash_opacity")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CharacterArt/Body/Head/HeadArt:material:shader_parameter/flash_opacity")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4rt51"]
_data = {
"RESET": SubResource("Animation_h2q2f"),
"hitAnimation": SubResource("Animation_ofoju")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_5cwag"]
radius = 258.048

[sub_resource type="AnimationLibrary" id="AnimationLibrary_qn2uv"]

[sub_resource type="Shader" id="Shader_2y081"]
code = "shader_type canvas_item;

uniform float flash_opacity = 0;
uniform vec4 flash_color : source_color = vec4(1.0,1.0,1.0,1.0);

void fragment() {
	vec4 tex_color = texture(TEXTURE, UV);
    vec3 blended_color = mix(tex_color.rgb, flash_color.rgb, flash_opacity); // Use only the RGB components for blending

	COLOR.rgb = blended_color;
	COLOR.a = tex_color.a;
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_nrtso"]
resource_local_to_scene = true
shader = SubResource("Shader_2y081")
shader_parameter/flash_opacity = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_ykg6r"]
resource_local_to_scene = true
shader = ExtResource("4_x4imc")
shader_parameter/flash_opacity = 0.0
shader_parameter/flash_color = Color(1, 1, 1, 1)

[node name="BaseUnit" type="CharacterBody2D" groups=["unit"]]
platform_on_leave = 2
script = ExtResource("1_kwkx1")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_ysvin")

[node name="HealthBar" type="TextureProgressBar" parent="."]
offset_left = -10.0
offset_top = -24.0
offset_right = 30.0
offset_bottom = 16.0
value = 100.0
texture_under = ExtResource("12_vaypi")
texture_progress = ExtResource("13_tnq6t")

[node name="EffectAnimations" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4rt51")
}
speed_scale = 2.0

[node name="SightRange" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="SightRange"]
shape = SubResource("CircleShape2D_5cwag")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state", "own_body")]
script = ExtResource("4_4ntpo")
initial_state = NodePath("Idle")
own_body = NodePath("..")

[node name="Follow" type="Node" parent="StateMachine"]
script = ExtResource("6_8col6")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("7_mura8")

[node name="Stun" type="Node" parent="StateMachine"]
script = ExtResource("9_f6npj")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("4_hr32h")

[node name="CoolDownTimer" type="Timer" parent="StateMachine/Attack"]

[node name="CharacterArt" type="Node2D" parent="."]
position = Vector2(0, 3)

[node name="MovementAnimations" type="AnimationPlayer" parent="CharacterArt"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_qn2uv")
}
speed_scale = 6.0
script = ExtResource("9_t578p")

[node name="Shadow" type="Sprite2D" parent="CharacterArt"]
position = Vector2(0, 8)
texture = ExtResource("2_sl3nq")
region_enabled = true
region_rect = Rect2(8, 156, 16, 8)

[node name="Body" type="Marker2D" parent="CharacterArt"]

[node name="Torso" type="Marker2D" parent="CharacterArt/Body"]

[node name="TorsoArt" type="Sprite2D" parent="CharacterArt/Body/Torso"]
material = SubResource("ShaderMaterial_nrtso")
position = Vector2(0, -2)
texture = ExtResource("2_sl3nq")
region_enabled = true
region_rect = Rect2(35, 129, 26, 10)

[node name="Head" type="Marker2D" parent="CharacterArt/Body"]

[node name="HeadArt" type="Sprite2D" parent="CharacterArt/Body/Head"]
material = SubResource("ShaderMaterial_ykg6r")
position = Vector2(0, -14)
texture = ExtResource("2_sl3nq")
region_enabled = true
region_rect = Rect2(38, 101, 20, 22)

[node name="RightLeg" type="Marker2D" parent="CharacterArt/Body"]

[node name="RightLegArt" type="Sprite2D" parent="CharacterArt/Body/RightLeg"]
position = Vector2(-3, 4)
texture = ExtResource("2_sl3nq")
region_enabled = true
region_rect = Rect2(49, 140, 6, 2)

[node name="LeftLeg" type="Marker2D" parent="CharacterArt/Body"]

[node name="LeftLegArt" type="Sprite2D" parent="CharacterArt/Body/LeftLeg"]
position = Vector2(3, 2)
texture = ExtResource("2_sl3nq")
region_enabled = true
region_rect = Rect2(49, 140, 6, 2)

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="body_entered" from="SightRange" to="StateMachine" method="_on_sight_range_body_entered"]
[connection signal="body_exited" from="SightRange" to="StateMachine" method="_on_sight_range_body_exited"]
[connection signal="body_shape_entered" from="SightRange" to="StateMachine" method="_on_sight_range_body_shape_entered"]
[connection signal="body_shape_exited" from="SightRange" to="StateMachine" method="_on_sight_range_body_shape_exited"]
[connection signal="timeout" from="StateMachine/Attack/CoolDownTimer" to="StateMachine/Attack" method="_on_cool_down_timer_timeout"]
